# mcp-framework

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
examples/: anthropic_agent_demo_with_tools.rs  browser_agent_anthropic.rs  browser_agent_openai.rs  client_usage.rs  openai_agent_demo_with_tools.rs  server_with_tools.rs  simple_server.rs
src/: agent.rs  client.rs  config.rs  error.rs  inspector.rs  lib.rs  logging.rs  protocol.rs  server.rs  session.rs
src/adapters/: anthropic.rs  mod.rs  openai.rs
src/connectors/: base.rs  http.rs  mod.rs  stdio.rs
