[package]
name = "mcp_framework"
version = "0.1.0"
edition = "2025"
description = "Rust MCP framework for building AI agents."
authors = ["MCP Framework Contributors"]
license = "MIT"
repository = "https://github.com/koki7o/mcp-framework"
homepage = "https://github.com/koki7o/mcp-framework"
keywords = ["mcp", "ai", "agents", "llm", "tools"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# Official Rust SDK for Model Context Protocol
rmcp = { version = "0.9", features = [
    "client",
    "server",
    "transport-io",
    "transport-child-process",
    "transport-sse-client",
    "transport-sse-server",
    "transport-streamable-http-client",
    "transport-streamable-http-server",
    "transport-async-rw",
    "auth",
] }

# Async runtime and utilities
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
bytes = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
env_logger = "0.11"

# Web framework (for Inspector)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Concurrent data structures
dashmap = "5.5"
parking_lot = "0.12"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
urlencoding = "2.1"
dotenv = "0.15.0"

# WebSocket support
tokio-tungstenite = "0.23"
